# cbcopy

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/cbcopy/: __main__.py  cli.py
tests/: test_cli.py
